2008-06-10  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8264: t3ditor - "+" (plus) signs are replaced by spaces (Thanks to Tobias Liebig)
	* Fixed bug #8591: AJAX encoding is UTF-8, thus has problems with backend charsets (Thanks to Tobias Liebig)

2008-06-10  Jeff Segars  <jeff@webempoweredchurch.org>

	* Followup to bugfix #8108: Extension configuration options are not always shown (Thanks to Steffen Kamper)

2008-06-10  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8643: Inline CSH is not styled with t3skin (Thanks to Steffen Kamper)
	* Fixed bug #8483: Lines break when longer as the width of the window (Thanks to Tobias Liebig)
	* Fixed bug #8478: highlighting error (the next line after a ">" gets colored as "value") (Thanks to Tobias Liebig)
	* Fixed bug #2905: Followup - t3skin - Styling of tab menus is bad when hovering (Thanks to Ben van't Ende)

2008-06-10  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8635: Side-effect of the fix for bug #7897: MM-relations, flexform and others got lost during copying/localizing

2008-06-10  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #8422: Context Sensitive Help mode with "display full text messages"

2008-06-09  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8509: Some labels in Module About are hardcoded, credits Christopher Stelmaszyk

2008-06-09  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8637: Parameter $deleteUnused of parsehtml::substituteMarkerArray was deleting too much if no $wrap was set (thanks to Francois Suter)

2008-06-05  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #6998: Installation misses key-definition of table pages (Patch by Steffen Müller)

2008-06-05  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8271: OpenDocs Icons: Hardcoded labels in title and alt-attributes, credits Stefano Kowalke
	* Fixed bug #8615: Text in admin panel is too small

2008-06-05  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8527: config.removeDefaultJS=1 leaves empty script block
