@@ -1,3 +1,7 @@
+2008-06-11  Ingmar Schlecht  <ingmar@typo3.org>
+
+	* Fixed #8674: Vulnerability of security bulletin typo3-20080611-1: Default value of fileDenyPattern allows arbitrary code execution on Apache (Patch by Henning Pingel, thanks!)
+
 2008-06-10  Benjamin Mack  <benni@typo3.org>
 
 	* Fixed bug #8264: t3ditor - "+" (plus) signs are replaced by spaces (Thanks to Tobias Liebig)
